curso/listas.txt
Python 3.10.7 (tags/v3.10.7:6cc6b13, Sep  5 2022, 14:08:36) [MSC v.1933 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> objetos = ["Hola", 3, 4.5, True]
>>> objetos
['Hola', 3, 4.5, True]
>>> objetos.append (False)
>>> objetos
['Hola', 3, 4.5, True, False]
>>> objetos.pop(1)
3
>>> objetos
['Hola', 4.5, True, False]
>>> for elemento in objetos
  File "<stdin>", line 1
    for elemento in objetos
                           ^
SyntaxError: expected ':'
>>> for elemento in objetos:
...     print(elemento)
...
Hola
4.5
True
False
>>> objetos [:: -1]
[False, True, 4.5, 'Hola']
>>> objetos[1:3]
[4.5, True]
>>>